--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
                             <div class="d-flex justify-content-center">
                                 <a href="#"><i class="bi bi-house-door-fill" style="color: #502314;"></i><br></a>
                             </div>
-                            <h5 class="fw-semibold" style="color: #502314;">Home</h5>
+                            <h5 class="fw-semibold fs-6" style="color: #502314;">Home</h5>
                         </div>
                         <div>
                             <div class="d-flex justify-content-center">
                                 <a href="#"><i class="bi bi-menu-app" style="color: #502314;"></i><br></a>
                             </div>
-                            <h5 class="fw-semibold" style="color: #502314;">Menu</h5>
+                            <h5 class="fw-semibold fs-6" style="color: #502314;">Menu</h5>
                         </div>
                         <div>
                             <div class="d-flex justify-content-center">
                                 <a href="#"><i class="bi bi-tag-fill" style="color: #502314;"></i></a>
                             </div>
-                            <h5 class="fw-semibold" style="color: #502314;">Offer</h5>
+                            <h5 class="fw-semibold fs-6" style="color: #502314;">Offer</h5>
                         </div>
                         <div>
                             <div class="d-flex justify-content-center">
                                 <a href="#"><i class="bi bi-cake-fill" style="color: #502314;"></i></a>
                             </div>
-                            <h5 class="fw-semibold" style="color: #502314;">Rewards</h5>
+                            <h5 class="fw-semibold fs-6" style="color: #502314;">Rewards</h5>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-6 py-4">
-                    <div class="card">
+                    <div class="card border-0">
                         <div class="card-img-bottom rounded-top-5">
                             <img src="./images/offer-1-img.jpg" class="img-fluid card-img-top" alt="">
                         </div>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 py-4">
-                    <div class="card">
+                    <div class="card border-0">
                         <div class="card-img-bottom rounded-top-5">
                             <img src="./images/offer-2-img.jpg" class="img-fluid card-img-top" alt="">
                         </div>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="col-12 .col-md-6 col-lg-6">
-                    <div class="card">
+                    <div class="card border-0">
                         <div class="card-img-bottom rounded-top-5">
                             <img src="./images/offer-3-img.jpg" class="img-fluid card-img-top" alt="">
                         </div>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="col-12 .col-md-6 col-lg-6">
-                    <div class="card">
+                    <div class="card border-0">
                         <div class="card-img-bottom rounded-top-5">
                             <img src="./images/offer-4-img.jpg" class="img-fluid card-img-top" alt="">
                         </div>
@@ -206,7 +206,8 @@
 
     <!-- offer section end -->
 
-    <!-- APP - INFO SECTION START -->
+    <!-- app section start -->
+
     <section class="app-info mt-5 pb-5" style="background-color: #eee8de;">
         <div class="container">
             <div class="row">
@@ -231,15 +232,21 @@
             </div>
         </div>
     </section>
-    <!-- APP - INFO SECTION START -->
+
+    <!-- app section end -->
 
     </main>
 
+    <!-- main section end  -->
+
+    <!-- footer section start  -->
+
     <footer class="text-center text-white" style="background-color: #502314;">
         <p class="py-3 fw-bold" style="font-size: 11px; margin-bottom: 85px;">TM & Copyright 2025 Burger King Company LLC. All Rights Reserved. |
-            <a href="#" style="color: white;">Do Not Sell Or Share My
-                Personal Information</a></p>
+            <a href="#" style="color: white;">Do Not Sell Or Share My Personal Information</a></p>
     </footer>
+
+    <!-- footer section end  -->
 
     <!-- main section end -->
 
